--- a/build.gradle
+++ b/build.gradle
@@ -19,4 +19,5 @@ dependencies {
     compile group: 'com.h2database', name: 'h2', version: '1.4.197'
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile group: 'org.mockito', name: 'mockito-all', version: '1.8.4'
 }
