--- a/build.gradle
+++ b/build.gradle
@@ -20,4 +20,5 @@ dependencies {
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile group: 'org.mockito', name: 'mockito-all', version: '1.8.4'
+    compile group: 'javax.xml.bind', name: 'jaxb-api', version: '2.3.1'
 }
