--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,21 @@
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:2.0.5.RELEASE")
+    }
+}
+
 plugins {
     id 'java'
     id "io.spring.dependency-management" version "1.0.6.RELEASE"
 }
+apply plugin: org.springframework.boot.gradle.plugin.SpringBootPlugin
+
+
+ext { springBootVersion = '2.0.5.RELEASE' }
+
 
 group 'io.connected.webtestclub'
 version '1.0-SNAPSHOT'
@@ -10,6 +24,11 @@ sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
+}
+
+jar {
+    baseName = 'TodoAppBackend'
+    version = '1.0'
 }
 
 dependencies {
