--- a/integrationTest/build.gradle
+++ b/integrationTest/build.gradle
@@ -11,6 +11,8 @@ repositories {
     mavenCentral()
 }
 
+test.onlyIf { Boolean.getBoolean('integration') }
+
 dependencies {
     // https://mvnrepository.com/artifact/com.squareup.okhttp3/okhttp
     compile group: 'com.squareup.okhttp3', name: 'okhttp', version: '3.13.1'
